// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Archive workflow details handler fail scenarios should fail when archivation with workflow name fails 1`] = `
{
  "fields": [
    "workflowName",
    "workflowKey",
  ],
  "format": "table",
  "header": true,
  "output": [],
}
`;

exports[`Archive workflow details handler fail scenarios should fail when archivation with workflow name fails 2`] = `
{
  "fields": [
    "workflowName",
    "workflowKey",
  ],
  "format": "table",
  "header": true,
  "output": [
    {
      "workflowKey": "fake-workflow-key",
      "workflowName": "fake-name",
    },
  ],
}
`;

exports[`Archive workflow details handler process method should archive a workflow using workflow name 1`] = `
{
  "fields": [
    "workflowName",
    "workflowKey",
  ],
  "format": "table",
  "header": true,
  "output": [
    {
      "workflowKey": "fakekey",
      "workflowName": "fake-name",
    },
  ],
}
`;
